Changed loginPageText wrapper from <span> to <p>. Improved login container (header, text and form) alignment. Fixed app.json.

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -246,7 +246,7 @@ a:hover {
   top: 0;
   bottom: 0;
 
-  .configManagerContainer, .loginContainer,.maintenanceContainer {
+  .configManagerContainer, .loginContainer, .maintenanceContainer {
     margin: auto;
     width: 400px;
     height: 170px;
@@ -257,9 +257,13 @@ a:hover {
     bottom: 0;
   }
 
-  .loginContainer .loginHeader {
-    text-align: center;
-    margin-bottom: 30px;
+  .loginContainer {
+    display: table;
+
+    .loginHeader {
+      text-align: center;
+      margin-bottom: 30px;
+    }
   }
 
   .maintenanceContainer {
